[gd_scene load_steps=19 format=3 uid="uid://cnjng5dmw38nb"]

[ext_resource type="Texture2D" uid="uid://300oyfe1rynr" path="res://assets/graphics/tilemap.png" id="1_7xwb7"]
[ext_resource type="Script" path="res://scenes/Level.gd" id="1_ghslw"]
[ext_resource type="PackedScene" uid="uid://biyh1c381ygoy" path="res://scenes/Player.tscn" id="2_xneo6"]
[ext_resource type="PackedScene" uid="uid://b3glr1i6s1o7s" path="res://scenes/PointLight.tscn" id="3_1ylxy"]
[ext_resource type="PackedScene" uid="uid://dkcoegp5weutl" path="res://scenes/LightsGroup.tscn" id="3_dmcn3"]
[ext_resource type="PackedScene" uid="uid://v78jobrf0e72" path="res://scenes/Switch.tscn" id="3_nl83m"]
[ext_resource type="PackedScene" uid="uid://dsqlh84n7dv" path="res://scenes/Spectre.tscn" id="3_xkd60"]
[ext_resource type="PackedScene" uid="uid://c8ds4y0axl7mt" path="res://scenes/OscilloCPU.tscn" id="8_m2mu1"]
[ext_resource type="PackedScene" uid="uid://3tdm72k6dw26" path="res://scenes/Oscillo.tscn" id="9_6egb6"]
[ext_resource type="Texture2D" uid="uid://bwasvfrrnre1w" path="res://assets/graphics/citrink.png" id="9_15045"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_rr3kq"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_uwy0i"]
vertices = PackedVector2Array(0, 32, -32, 32, -32, -32, 0, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 0, -32, 0, 32, -32, 32)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_7ukl6"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -8, 16, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -8, 16, -8, 16, 16, -16, 16)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tsbj6"]
vertices = PackedVector2Array(0, 32, -32, 32, -32, -32, 0, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 0, -32, 0, 32, -32, 32)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_skqo4"]
texture = ExtResource("1_7xwb7")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_rr3kq")
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -24, 16, -24, 16, 24, 32, 24, 32, 32, -32, 32, -32, 24, -24, 24, -24, -24, -32, -24)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -23.5, 16, -24, 16, -16, -16, -16, -16, -24, -32, -24)
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_7ukl6")
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 32, -32, 32, 32, -16, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -32, 32, -32, 32, 32, -16, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -32, 32, -32, 32, 32, 8, 32)
0:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_uwy0i")
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -32, 32, -32, 32, 32, 8, 32)
1:3/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_tsbj6")
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
8:9/0 = 0
8:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:9/0/physics_layer_0/angular_velocity = 0.0
9:9/0 = 0
9:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:9/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_84qpw"]
tile_size = Vector2i(64, 64)
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
navigation_layer_0/layers = 1
sources/1 = SubResource("TileSetAtlasSource_skqo4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3q7k"]
texture = ExtResource("9_15045")
region_rect = Rect2(33, 1, 6, 6)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_psguj"]
texture = ExtResource("9_15045")
region_rect = Rect2(17, 1, 6, 6)

[node name="Level" type="Node2D"]
script = ExtResource("1_ghslw")

[node name="Map" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanvasModulate" type="CanvasModulate" parent="Map"]
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="TileMap" type="TileMap" parent="Map"]
tile_set = SubResource("TileSet_84qpw")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65537, 0, 65536, 65537, 0, 131072, 65537, 0, 196608, 65537, 0, 262144, 65537, 0, 327680, 65537, 0, 393216, 65537, 0, 1, 65537, 0, 2, 1, 1610612737, 3, 65537, 0, 4, 65537, 0, 5, 65537, 0, 6, 65537, 0, 7, 65537, 0, 8, 65537, 0, 9, 65537, 0, 10, 65537, 0, 11, 65537, 0, 12, 65537, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0, 589824, 65537, 0, 524288, 65537, 0, 458752, 65537, 0, 327692, 1, 0, 131080, 1, 0, 196616, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 524298, 1, 0, 131075, 1, 0, 196611, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 196612, 65537, 0, 196613, 1, 0, 327684, 65537, 0, 327685, 1, 0, 327686, 1, 0, 196614, 1, 0, 393221, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 393227, 1, 0, 393226, 1, 0, 196618, 1, 0, 196619, 1, 0, 524290, 1, 0, 458754, 1, 0, 393218, 1, 0, 327682, 1, 0, 262146, 1, 0, 196610, 1, 0, 131074, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 262147, 1, 0, 262148, 65537, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 131078, 1, 0, 131077, 1, 0, 65541, 1, 0, 65540, 65537, 0, 131076, 65537, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 327688, 1, 0, 262152, 1, 0, 262153, 1, 0, 196617, 1, 0, 131081, 1, 0, 65545, 1, 0, 65546, 1, 0, 131082, 1, 0, 131083, 1, 0, 65547, 1, 0, 327689, 1, 0, 393225, 1, 0, 458761, 1, 0, 524297, 1, 0, 458762, 1, 0, 458763, 1, 0, 524299, 1, 0, 327690, 1, 0, 262154, 1, 0, 262155, 1, 0, 327691, 1, 0, 524291, 1, 0, 524292, 65537, 0, 458756, 65537, 0, 393220, 65537, 0, 458757, 1, 0, 524293, 1, 0, 65538, 1, 0, 13, 65537, 0, 14, 65537, 0, 15, 65537, 0, 16, 65537, 0, 17, 65537, 0, 18, 65537, 0, 19, 65537, 0, 65555, 65537, 0, 131091, 65537, 0, 196627, 65537, 0, 262163, 65537, 0, 327699, 65537, 0, 393235, 65537, 0, 458771, 65537, 0, 524307, 65537, 0, 589843, 65537, 0, 655379, 65537, 0, 655360, 65537, 0, 720896, 65537, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 65537, 0, 393230, 1, 0, 327694, 1, 0, 262158, 1, 0, 196622, 1, 0, 131086, 1, 0, 65550, 1, 0, 65549, 1, 0, 65548, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 589837, 1, 0, 589836, 1, 0, 589835, 1, 0, 589834, 1, 0, 589833, 1, 0, 589832, 1, 0, 589831, 1, 0, 589830, 1, 0, 589829, 1, 0, 589828, 65537, 0, 589827, 1, 0, 589826, 1, 0, 589825, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 589838, 1, 0, 524302, 1, 0, 458766, 1, 0, 458767, 1, 0, 393231, 1, 0, 327695, 1, 0, 262159, 1, 0, 196623, 1, 0, 131087, 1, 0, 65551, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 1, 0, 524303, 1, 0, 589839, 1, 0, 655375, 1, 0, 655376, 1, 0, 589840, 1, 0, 589841, 1, 0, 524305, 1, 0, 458769, 1, 0, 393233, 1, 0, 327697, 1, 0, 262161, 1, 0, 196625, 1, 0, 131089, 1, 0, 65553, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, 589842, 1, 0, 655378, 1, 0, 655377, 1, 0, 65544, 1, 0, 65542, 1, 0, 65539, 1, 0, 786432, 65537, 0, 851968, 65537, 0, 851969, 65537, 0, 851970, 65537, 0, 851971, 65537, 0, 851972, 65537, 0, 851973, 65537, 0, 851974, 65537, 0, 851975, 65537, 0, 851976, 65537, 0, 851977, 65537, 0, 851978, 65537, 0, 851979, 65537, 0, 851980, 65537, 0, 851981, 65537, 0, 851982, 65537, 0, 851983, 65537, 0, 851984, 65537, 0, 851985, 65537, 0, 851986, 65537, 0, 851987, 65537, 0, 786451, 65537, 0, 786438, 1, 0, 786437, 1, 0, 786436, 1, 0, 786435, 1, 0, 786434, 1, 0, 786433, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 655364, 1, 0)

[node name="LightsGroups" type="Node2D" parent="Map"]

[node name="LightsGroup1" parent="Map/LightsGroups" node_paths=PackedStringArray("start_light", "switch", "lights_path", "oscillo_cpu", "oscillo_light") instance=ExtResource("3_dmcn3")]
start_light = NodePath("PointLightStart")
switch = NodePath("Switch")
lights_path = NodePath("LightsPath")
oscillo_cpu = NodePath("OscilloCPU")
oscillo_light = NodePath("LightsPath/PointLightLast1")

[node name="PointLightStart" parent="Map/LightsGroups/LightsGroup1" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 128)
scale = Vector2(1, 1)
on = true

[node name="Switch" parent="Map/LightsGroups/LightsGroup1" instance=ExtResource("3_nl83m")]
position = Vector2(224, 96)
on = true

[node name="LightsPath" type="Node2D" parent="Map/LightsGroups/LightsGroup1"]
position = Vector2(-7.62939e-06, 0)

[node name="PointLight1" parent="Map/LightsGroups/LightsGroup1/LightsPath" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 272)
scale = Vector2(0.75, 0.75)
timer = 2.0

[node name="PointLight2" parent="Map/LightsGroups/LightsGroup1/LightsPath" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 392)
scale = Vector2(0.75, 0.75)
timer = 2.0

[node name="PointLight3" parent="Map/LightsGroups/LightsGroup1/LightsPath" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 512)
scale = Vector2(0.75, 0.75)
timer = 2.0

[node name="PointLight4" parent="Map/LightsGroups/LightsGroup1/LightsPath" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 632)
scale = Vector2(0.75, 0.75)
energy = 0.0
timer = 2.0

[node name="PointLightLast1" parent="Map/LightsGroups/LightsGroup1/LightsPath" instance=ExtResource("3_1ylxy")]
position = Vector2(160, 752)
scale = Vector2(0.75, 0.75)
energy = 0.0
timer = 14.0

[node name="OscilloCPU" parent="Map/LightsGroups/LightsGroup1" instance=ExtResource("8_m2mu1")]
position = Vector2(160, 800)
rotation = 1.5708

[node name="Player" parent="Map" instance=ExtResource("2_xneo6")]
unique_name_in_owner = true
position = Vector2(152, 120)
scale = Vector2(0.75, 0.75)
collision_layer = 5

[node name="Camera2D" type="Camera2D" parent="Map/Player"]

[node name="Spectres" type="Node2D" parent="Map"]

[node name="Spectre1" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(640, 512)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre2" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(640, 128)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre3" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(256, 704)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre4" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(640, 320)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre5" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(640, 704)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre6" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(128, 512)
motion_mode = 1
follow = NodePath("../../Player")

[node name="Spectre7" parent="Map/Spectres" node_paths=PackedStringArray("follow") instance=ExtResource("3_xkd60")]
position = Vector2(192, 320)
motion_mode = 1
follow = NodePath("../../Player")

[node name="GUI" type="CanvasLayer" parent="Map"]
unique_name_in_owner = true

[node name="LifeBar" type="ProgressBar" parent="Map/GUI"]
unique_name_in_owner = true
offset_left = 24.0
offset_top = 16.0
offset_right = 152.0
offset_bottom = 32.0
theme_override_styles/background = SubResource("StyleBoxTexture_j3q7k")
theme_override_styles/fill = SubResource("StyleBoxTexture_psguj")
value = 50.0
show_percentage = false

[node name="OscilloLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Oscillo" parent="OscilloLayer" instance=ExtResource("9_6egb6")]
unique_name_in_owner = true
visible = false
offset_right = 832.0
offset_bottom = 640.0

[connection signal="display_oscillo" from="Map/LightsGroups/LightsGroup1" to="." method="_on_display_oscillo"]
[connection signal="dead" from="Map/Player" to="." method="_on_player_dead"]
[connection signal="life_changed" from="Map/Player" to="." method="_on_player_life_changed"]
[connection signal="body_entered" from="Map/Spectres/Spectre1" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre1" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre2" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre2" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre3" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre3" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre4" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre4" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre5" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre5" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre6" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre6" to="." method="_on_spectre_body_exited"]
[connection signal="body_entered" from="Map/Spectres/Spectre7" to="." method="_on_spectre_body_entered"]
[connection signal="body_exited" from="Map/Spectres/Spectre7" to="." method="_on_spectre_body_exited"]
[connection signal="out" from="OscilloLayer/Oscillo" to="." method="_on_oscillo_out"]
